# asgard_guis

./: .gitignore  DETDATA  README.md  pyproject.toml  pyproject.toml~  spiral-search.py
DETDATA/: TCSHDR_DCS1_10.biniss  TCSHDR_DCS1_10.iss  TCSHDR_DCS1_11.biniss  TCSHDR_DCS1_11.iss  TCSHDR_DCS1_12.biniss  TCSHDR_DCS1_12.iss  TCSHDR_DCS1_13.biniss  TCSHDR_DCS1_13.iss  TCSHDR_DCS1_14.biniss  TCSHDR_DCS1_14.iss  TCSHDR_DCS1_15.biniss  TCSHDR_DCS1_15.iss  TCSHDR_DCS1_16.biniss  TCSHDR_DCS1_16.iss  TCSHDR_DCS1_17.biniss  TCSHDR_DCS1_17.iss  TCSHDR_DCS1_18.biniss  TCSHDR_DCS1_18.iss  TCSHDR_DCS1_19.biniss  TCSHDR_DCS1_19.iss  TCSHDR_DCS1_2.biniss  TCSHDR_DCS1_2.iss  TCSHDR_DCS1_20.biniss  TCSHDR_DCS1_20.iss  TCSHDR_DCS1_21.biniss  TCSHDR_DCS1_21.iss  TCSHDR_DCS1_22.biniss  TCSHDR_DCS1_22.iss  TCSHDR_DCS1_23.biniss  TCSHDR_DCS1_23.iss  TCSHDR_DCS1_24.biniss  TCSHDR_DCS1_24.iss  TCSHDR_DCS1_25.biniss  TCSHDR_DCS1_25.iss  TCSHDR_DCS1_26.biniss  TCSHDR_DCS1_26.iss  TCSHDR_DCS1_27.biniss  TCSHDR_DCS1_27.iss  TCSHDR_DCS1_28.biniss  TCSHDR_DCS1_28.iss  (+137 more)
asgard_guis/: Heimdallr_RTC_performance.py  Heimdallr_RTC_performance.py~  ZMQ_control_client.py  ex_status_out.test  image_search_gui.py  network_bw.py  plot_temps.py  pupil_search_gui.py  shutdown_mimir.py  spiral_search.py  spiral_search_gui.py  startup_mimir.py  status.py  t_status_sim.py  temperature_watchdog.py  universal_client.py  utils.py
asgard_guis/cmd_scripts/: Heimdallr_RTC_performance.py  log_viewer.py  s_labmode.py  s_skymode.py  shortcuts.py  shutdown_mimir.py  startup_mimir.py  status.py  temperature_watchdog.py  universal_client.py
scripts/: PDU.py  dcs_universal_client.py  shutdown_mimir.py  startup_mimir.py  temperature_watchdog.py  utils.py
