[project]
name = "asgard_guis"
version = "0.0.1"
readme = "README.md"
requires-python =">=3.8"
license = {file = "LICENSE"}

[project.scripts] 
temperature-watchdog = "asgard_guis.temperature_watchdog:main"
temperature-plotting = "asgard_guis.plot_temps:main"
mimir-startup = "asgard_guis.startup_mimir:main"
mimir-shutdown = "asgard_guis.shutdown_mimir:main"
text-clients = "asgard_guis.universal_client:main"
im-search-gui = "asgard_guis.spiral_search_gui:main"
pu-search-gui = "asgard_guis.pupil_search_gui:main"

[tool.hatch.build.targets.wheel]
packages = ["asgard_guis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
